@@ -3,7 +3,7 @@
  * 
  * $Id$
  * 
- * Copyright (c) 1991-2005 Francois Felix Ingrand.
+ * Copyright (c) 1991-2012 Francois Felix Ingrand.
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -73,31 +73,21 @@
 		  return SYMBOL_TK;}
 ->		{  oprs_yylval.string = cond_del_sym;
 		  return SYMBOL_TK;}
-=>	|
-/* ASSERT and CONCLUDE are both allowed */
-[Aa][Ss][Ss][Ee][Rr][Tt]	|
-[Cc][Oo][Nn][Cc][Ll][Uu][Dd][Ee]	{  oprs_yylval.string = temp_conclude_sym;
+=>		{  oprs_yylval.string = temp_conclude_sym;
 		  return SYMBOL_TK;}
-~>	|
-[Rr][Ee][Tt][Rr][Aa][Cc][Tt] 		{  oprs_yylval.string = retract_sym;
+~> 		{  oprs_yylval.string = retract_sym;
 		  return SYMBOL_TK;}
-!	|
-[Aa][Cc][Hh][Ii][Ee][Vv][Ee] 		{  oprs_yylval.string = achieve_sym;
+! 		{  oprs_yylval.string = achieve_sym;
 		  return SYMBOL_TK;}
-\?	|
-[Tt][Ee][Ss][Tt]	 		{  oprs_yylval.string = test_sym;
+\?	 	{  oprs_yylval.string = test_sym;
 		  return SYMBOL_TK;}
-#	|
-[Pp][Rr][Ee][Ss][Ee][Rr][Vv][Ee]	{  oprs_yylval.string = preserve_sym;
+#		{  oprs_yylval.string = preserve_sym;
 		  return SYMBOL_TK;}
-\^	|
-[Ww][Aa][Ii][Tt]	 		{  oprs_yylval.string = twait_sym;
+\^	 	{  oprs_yylval.string = twait_sym;
 		  return SYMBOL_TK;}
-\%	|
-[Mm][Aa][Ii][Nn][Tt][Aa][Ii][Nn]	{  oprs_yylval.string = maintain_sym;
+\%		{  oprs_yylval.string = maintain_sym;
 		  return SYMBOL_TK;}
-\<>	|
-[Cc][Aa][Ll][Ll]			{  oprs_yylval.string = call_sym;
+\<>		{  oprs_yylval.string = call_sym;
 		  return SYMBOL_TK;}
 
 /* Paranthesis and brackets. */
